# SNU_07Team_Loan_status

./: .gitignore  .gitmodules  README.md
LoanStatus/: CMakeList.txt  CMakeLists.txt  CsvLoader.cpp  CsvLoader.h  ExperimentManager.cpp  ExperimentManager.h  ExperimentManagerSub.cpp  LoanStatus.sln  LoanStatus.vcxproj  LoanStatus.vcxproj.filters  main.cpp  pch.h
LoanStatus/script/: LoanStatusPythonVer.py  LoanStatusPythonVer2.py  NLP_dual_earlystopping.py  env.yaml  model_v6.py
LoanStatus/src/: ExperimentManager.cpp  ExperimentManager.h  LoanStatus.vcxproj  main.cpp
LoanStatus/src_py/: hanlde_csv.py
LoanStatus/src_py/XGBoost/: 오승담_xgboost_loan_status.ipynb
